--- a/dapp/src/components/Arena/Arena.css
+++ b/dapp/src/components/Arena/Arena.css
@@ -142,12 +142,12 @@
       width: 100%;
       height: 300px;
       overflow: auto;
-      padding: 0 20px;
+      padding: 10px 20px;
       background-color: rgba(255, 255, 255, 0.1); }
       .battle-field .right > .texttotu > p, .battle-field .right > .texttotu > p > a {
         color: #fff;
         font-size: 13px;
-        line-height: 32px; }
+        line-height: 18px; }
       .battle-field .right > .texttotu a {
         text-decoration: underline; }
         .battle-field .right > .texttotu a:hover {
@@ -199,7 +199,8 @@
 .place_bet_button {
   display: inline-block;
   margin-top: 10px;
-  width: 150px; }
+  width: 150px;
+  height: 45px; }
 
 .history-button {
   display: inline-block;
