--- a/dapp/src/components/Arena/Arena.scss
+++ b/dapp/src/components/Arena/Arena.scss
@@ -12,7 +12,7 @@
   overflow: auto;
   background-color: #272424;
   transition: left .3s;
-  
+
   &.open{
     left: 0;
   }
@@ -36,7 +36,7 @@
     right: 12%;
     animation: cloudMove2 18s infinite linear;
   }
-  
+
   & .ui{
     position: absolute;
     &.start1{
@@ -169,19 +169,19 @@
     >.texttotu{
       width: 100%;
       height: 300px;
-      overflow: auto; 
-      padding: 0 20px;
+      overflow: auto;
+      padding: 10px 20px;
       background-color: rgba($color: #fff, $alpha: 0.1);
       >p, >p >a{
         color: #fff;
         font-size: 13px;
-        line-height: 32px;
+        line-height: 18px;
       }
       a{
         text-decoration: underline;
         &:hover{
           color: #FFF100;
-        } 
+        }
       }
     }
   }
@@ -194,7 +194,7 @@
   background-size: 240px;
   background-repeat: no-repeat;
   background-image: url("../../images/select.png");
-  
+
   & select {
     position: absolute;
     top: 8px;
@@ -240,6 +240,7 @@
   display: inline-block;
   margin-top: 10px;
   width: 150px;
+  height: 45px;
 }
 
 .history-button {
@@ -337,7 +338,7 @@
     left: 26%;
     animation: starMove2 2s infinite linear;
   }
-  
+
   & .start3{
     width: 13px;
     height: 20px;
@@ -364,7 +365,7 @@
     right: 26%;
     animation: starMove2 2s infinite linear;
   }
-  
+
   & .start6{
     width: 13px;
     height: 20px;
