UI Changes for Ebakus network

--- a/dapp/src/components/Arena/Arena.css
+++ b/dapp/src/components/Arena/Arena.css
@@ -182,7 +182,7 @@
   height: 45px;
   background-size: 240px;
   background-repeat: no-repeat;
-  background-image: url("../../images/inputETH.png"); }
+  background-image: url("../../images/inputEBK.png"); }
   .bet_eth_field input {
     position: absolute;
     top: 8px;
