--- a/dapp/src/components/Arena/Arena.scss
+++ b/dapp/src/components/Arena/Arena.scss
@@ -219,7 +219,7 @@
   height: 45px;
   background-size: 240px;
   background-repeat: no-repeat;
-  background-image: url("../../images/inputETH.png");
+  background-image: url("../../images/inputEBK.png");
 
   & input {
     position: absolute;
