--- a/dapp/src/components/Arena/Arena.scss
+++ b/dapp/src/components/Arena/Arena.scss
@@ -274,6 +274,7 @@
   & .center {
     flex-direction: column;
     align-items: center;
+    text-align: center;
 
     & span {
       margin-top: 10px;
